# simd-phys-rs

./: Cargo.toml
src/: aligned.rs  lib.rs  vc64.rs  vf64.rs
src/r3/: fields.rs  mod.rs
