[package]
name = "simd-phys"
version = "0.1.0"
authors = ["hmb <humberto.munozb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

alga = "0.9.2"
num-complex = "0.2.4"
num-traits = "0.2.11"

[dev-dependencies]
criterion = "0.3"