[package]
name = "simd-phys"
version = "0.1.0"
authors = ["hmb <humberto.munozb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
alga = "0.9.2"
nalgebra = "0.19.0"
num-complex = "0.2"
num-traits = "0.2.11"
rand = "0.7"
rand_distr = "0.2"

[dev-dependencies]
#criterion = "0.3"